[metadata]
name = newslinkrss
version = 0.6.0
url = https://sr.ht/~ittner/newslinkrss/
license = GPLv3
author = Alexandre Erwin Ittner
author_email = alexandre@ittner.com.br
description = Generate RSS feeds from generic sites
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers

[options]
python_requires = >=3.6
packages = find:
zip_safe = true
scripts = newslinkrss
install_requires =
    requests >= 2.18.4
    PyRSS2Gen >= 1.1.0
    python-dateutil >= 2.6.1
    lxml >= 4.6.3
    cssselect >= 1.2.0
